# KorToBraille_Python

./: .gitignore  KorToBraille.py  Main.py  README.md  pyproject.toml  test.py
src/KorToBraille/: KorToBraille.py  NumberFunc.py  PunctuationFunc.py  data.py  test.py
